<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="first_button">spotify streamer</string>
    <string name="second_button"> football scores app</string>
    <string name="third_button">library app</string>
    <string name="fourth_button">build it bigger</string>
    <string name="fifth_button">xyz reader</string>
    <string name="six_button">capstone</string>
    <string name="message">This button will launch %s</string>
    <string name="error_message">This is not a button</string>
</resources>
