<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">
    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AppTheme.MyTitleTextView"
        tools:text="My Nanodegree Apps!"/>
    <Button
        android:text="@string/first_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendMessage"
        tools:text="@string/first_button"/>
    <Button
        android:text="@string/second_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendMessage"
        tools:text="@string/second_button"/>
    <Button
        android:text="@string/third_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendMessage"
        tools:text="@string/third_button"/>
    <Button
        android:text="@string/fourth_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendMessage"
        tools:text="@string/fourth_button"/>
    <Button
        android:text="@string/fifth_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendMessage"
        tools:text="@string/fifth_button"/>
    <Button
        android:text="@string/six_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendMessage"
        android:background="@drawable/pink_button_bg"
        tools:text="@string/six_button"/>
</LinearLayout>
